# cq-simbe

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  test-CQ-SimBE.yml
examples/: CMakeLists.txt  aqft.c  qft.c
examples/qft/: CMakeLists.txt  qft-utils.c  qft.h  sqft.c
include/: cq.h  datatypes.h  device_ops.h  env.h  host_ops.h  kernel_utils.h  kernels.h  qasm_gates.h  utils.h
src/: CMakeLists.txt  env.c  host_ops.c
src/device/: CMakeLists.txt  control.c  control.h  device_ops.c  device_utils.c  device_utils.h  opreg.c  opreg.h  qasm_gates.c  resources.c  resources.h
src/host/: CMakeLists.txt  env.c  host_ops.c  opcodes.h  utils.c
src/host-device/: CMakeLists.txt  comms.c  comms.h  kernel_utils.c  kernels.c
tests/: CMakeLists.txt  test_host_env.c  test_host_env_runner.c  test_qkerns.c  test_qkerns.h
tests/device/: CMakeLists.txt  test_device_control.c  test_device_control.h  test_device_control_runner.c  test_device_ops.c  test_device_ops.h  test_device_ops_runner.c  test_device_resource_management.c  test_device_resource_management.h  test_device_resource_management_runner.c  test_device_utils.c  test_device_utils.h  test_device_utils_runner.c  test_qasm_gates.c  test_qasm_gates.h  test_qasm_gates_runner.c
tests/host/: CMakeLists.txt  test_executors.c  test_executors.h  test_executors_runner.c  test_host_env.c  test_host_env.h  test_host_env_runner.c  test_host_resource_management.c  test_host_resource_management.h  test_host_resource_management_runner.c  test_host_utils.c  test_host_utils.h  test_host_utils_runner.c  test_qkerns.c  test_qkerns.h
tests/host-device/: CMakeLists.txt  test_comms.c  test_comms.h  test_comms_runner.c  test_kernel_utils.c  test_kernel_utils.h  test_kernel_utils_runner.c
tests/validation/: CMakeLists.txt  test_qft.c  test_qft.h  test_qft_runner.c
